Fixed overlay and aligning on smaller screens

--- a/index.css
+++ b/index.css
@@ -53,8 +53,10 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  height: 678px;
+  height: 100vh;
   width: 100%;
+  object-fit: contain;
+  object-position: center;
   pointer-events: none;
   z-index: 5;
   background: linear-gradient(
@@ -70,7 +72,7 @@ body {
 }
 
 .carousel-control-prev, .carousel-control-next {
-	z-index: 1000;
+	z-index: 100;
 }
 
 .welcome-banner {
@@ -81,7 +83,12 @@ body {
   width: 90%;
   max-width: 1200px;
   z-index: 20; 
-  color: #cccccc;
+}
+
+.welcome-center {
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto; 
 }
 
 .welcome-container {
@@ -99,14 +106,12 @@ body {
   border-radius: 50%;
   object-fit: cover;
   border: 5px solid black;
-  margin-left: 150px;
 }
 
 .welcome-text {
   flex: 1;
   min-width: 250px;
   color: white;
-  margin-right: 100px;
 }
 
 .welcome-text h1 {
@@ -129,6 +134,16 @@ body {
   text-decoration: none;
   font-family: 'DishonoredStyleFont', sans-serif;
   font-size: 25px;
+}
+
+@media (max-width: 768px) {
+  .welcome-container {
+    flex-direction: column;
+  }
+
+  .welcome-text {
+    margin-top: 20px;
+  }
 }
 
 .testimonials {
